[package]
name = "citation_refiner"
authors = ["AllenYolk (Yifan Huang) <allen.yfhuang@gmail.com>"]
version = "0.1.0"
edition = "2021"
description = "Given the title of a paper (or a query of other kind), get a refined BibTeX citation!"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arboard = "3.2.0"
clap = { version = "4.2.2", features = ["derive"] }
reqwest = { version = "0.11.16", features = ["blocking"] }
scraper = "0.16.0"
